objects/Permit_PJ__c.object
<CustomObject>
    <fields>
        <fullName>ASProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipName>Permit_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <label>Cost Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost of the permit</description>
        <label>Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <inlineHelpText>Date the permit is approved. Updates automatically when the status = &quot;Approved&quot; but can also be manually entered</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <inlineHelpText>Date the permit is submitted.  Updates automatically when the status = &quot;Submitted&quot; but can also be manually entered</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsBilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional information on the permit</inlineHelpText>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDCProject</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewing_Office__c</fullName>
        <description>This is the municipality the permit was pulled in.</description>
        <inlineHelpText>What Govt Office/Department was the permit submitted to? (Should be an Account in Salesforce)</inlineHelpText>
        <label>Reviewing Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Permits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of the permit?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Turn_Around_Time__c</fullName>
        <formula>Date_Approved__c  -  Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Turn around time for the permit- based on the date it was submitted and the date approved</inlineHelpText>
        <label>Turn Around Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Structural</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permits</label>
    <nameField>
        <label>Permit/Ref Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>For entering Permit information</description>
        <label>Permit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>